--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t singhabhinav/react-project -f Dockerfile.dev .
+    - docker build -t singhabhinav/react-project -f Dockerfile_dev .
 
 script:
     - docker run -e CI=true singhabhinav/react-project npm run test
