--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,8 @@ deploy:
     env: "DockerReactProject-env" # Copy it from Elastic Beanstalk dashboard
     bucket_name: "elasticbeanstalk-us-west-1-034275272121"
     bucket_path: "docker"
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
     on:
         branch: master
