--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ deploy:
     bucket_name: "elasticbeanstalk-us-west-1-034275272121"
     bucket_path: "docker"
     access_key_id: $AWS_ACCESS_KEY
-    secret_access_key:
-        secure: "$AWS_SECRET_KEY"
+    secret_access_key: $AWS_SECRET_KEY
     on:
         branch: master
