--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
     - docker
 
 before_install:
-    - docker build -t lipdocker1/react-project -f Dockerfile_dev .
+    - docker build -t lipdocker1/react-project:prod -f Dockerfile_dev .
 
 script:
-    - docker run -e CI=true lipidocker1/react-project npm run test
+    - docker run -e CI=true lipidocker1/react-project:prod npm run test
 
 #deploy:
 #   provider: elasticbeanstalk
