travis file change

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - docker build -t singhabhinav/react-project -f Dockerfile_dev .
 
 script:
-    - docker run -e CI=true singhabhinav/react-project:prod npm run test
+    - docker run -e CI=true singhabhinav/react-project npm run test
 
 #deploy:
 #   provider: elasticbeanstalk
