--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
     - docker
 
 before_install:
-    - docker build -t rkgovindu/react-project -f Dockerfile_dev .
+    - docker build -t rkgovindu/react-project-prod -f Dockerfile_dev .
 
 script:
-    - docker run -e CI=true rkgovindu/react-project npm run test
+    - docker run -e CI=true rkgovindu/react-project-prod npm run test
 
 #deploy:
 #    provider: elasticbeanstalk
