--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 script:
     - docker run -e CI=true lipidocker1/react-project:prod npm run test
 
-#deploy:
+deploy:
    provider: elasticbeanstalk
    region: us-west-1 # Specify your region
    app: "react-project-docker" # Copy it from Elastic Beanstalk dashboard
