--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ script:
 deploy:
     provider: elasticbeanstalk
     region: us-west-1 # Specify your region
-    app: react-project-docker # Copy it from Elastic Beanstalk dashboard
-    env: ReactProjectDocker-env # Copy it from Elastic Beanstalk dashboard
+    app: "react-project-docker" # Copy it from Elastic Beanstalk dashboard
+    env: "ReactProjectDocker-env" # Copy it from Elastic Beanstalk dashboard
     bucket_name: "elasticbeanstalk-us-west-1-422800408520"
     bucket_path: "docker"
     access_key_id: $AWS_ACCESS_KEY
