pushed new hello app name correcte..3123123123

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
     provider: elasticbeanstalk
     region: us-west-1 # Specify your region
     app: "react_project_docker_v1" #py Copy it from Elastic Beanstalk dashboard
-    env: "ReactProjectDockerV1-env" #opy it from Elastic Beanstalk dashboard
+    env: "ReactProjectDockerV1" #opy it from Elastic Beanstalk dashboard
     bucket_name: "elasticbeanstalk-us-west-1-422800408520"
     bucket_path: "docker"
     access_key_id: $AWS_ACCESS_KEY
