--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 deploy:
     provider: elasticbeanstalk
     region: us-west-1 # Specify your region
-    app: "react_project_docker_v1" #py Copy it from Elastic Beanstalk dashboard
+    app: "react_project_docker_v1" #py Copy ishkkjashdk t from Elastic Beanstalk dashboard
     env: "ReactProjectDockerV1" #opy it from Elastic Beanstalk dashboard
     bucket_name: "elasticbeanstalk-us-west-1-422800408520"
     bucket_path: "docker"
