--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ deploy:
      access_key_id: $AWS_ACCESS_KEY
      secret_access_key: $AWS_SECRET_KEY
      on:
-         branch: master
+         branch: feature_a
