travis file updated with stage and prod deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,25 @@ script:
     - docker run -e CI=true lipidocker1/react-project:prod npm run test
 
 deploy:
-   provider: elasticbeanstalk
-   region: us-west-1 # Specify your region
-   app: "react-project-docker" # Copy it from Elastic Beanstalk dashboard
-   env: "ReactProjectDocker-env" # Copy it from Elastic Beanstalk dashboard
-   bucket_name: "elasticbeanstalk-us-west-1-391998522123"
-   bucket_path: "docker"
-   access_key_id:  $AWS_ACCESS_KEY
-   secret_access_key: $AWS_SECRET_KEY
-   on:
-       branch: master
+  
+  - provider: elasticbeanstalk
+    region: us-west-1 # Specify your region
+    app: "react-project-dockerstaging" # Copy it from Elastic Beanstalk dashboard
+    env: "ReactProjectDockersraging-env" # Copy it from Elastic Beanstalk dashboard
+    bucket_name: "elasticbeanstalk-us-west-1-391998522123"
+    bucket_path: "docker"
+    access_key_id:  $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    on:
+        branch: staging
+                                                    
+  - provider: elasticbeanstalk
+    region: us-west-1 # Specify your region
+    app: "react-project-docker" # Copy it from Elastic Beanstalk dashboard
+    env: "ReactProjectDocker-env" # Copy it from Elastic Beanstalk dashboard
+    bucket_name: "elasticbeanstalk-us-west-1-391998522123"
+    bucket_path: "docker"
+    access_key_id:  $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    on:
+        branch: master
