--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,25 @@ before_install:
 script:
     - docker run -e CI=true prakhar27/react-project npm run test
 deploy:
-    provider: elasticbeanstalk
-    region: us-west-1 # Specify your region
-    app: "react-project-docker-staging" # Copy it from Elastic Beanstalk dashboard
-    env: "ReactProjectDockerStaging-env" # Copy it from Elastic Beanstalk dashboard
-    bucket_name: "elasticbeanstalk-us-west-1-290161786162"
-    bucket_path: "docker"
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    on:
-        branch: master
+    - provider: elasticbeanstalk
+      region: us-west-1 # Specify your region
+      app: "react-project-docker-staging" # Copy it from Elastic Beanstalk dashboard
+      env: "ReactProjectDockerStaging-env" # Copy it from Elastic Beanstalk dashboard
+      bucket_name: "elasticbeanstalk-us-west-1-290161786162"
+      bucket_path: "docker"
+      access_key_id: $AWS_ACCESS_KEY
+      secret_access_key: $AWS_SECRET_KEY
+      on:
+          branch: master
+
+    - provider: elasticbeanstalk
+      region: us-west-1 # Specify your region
+      app: "react-project-docker-pre-staging" # Copy it from Elastic Beanstalk dashboard
+      env: "ReactProjectDockerPreStaging-env" # Copy it from Elastic Beanstalk dashboard
+      bucket_name: "elasticbeanstalk-us-west-1-290161786162"
+      bucket_path: "docker"
+      access_key_id: $AWS_ACCESS_KEY
+      secret_access_key: $AWS_SECRET_KEY
+      on:
+          branch: staging
+
