--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
-#sudo: required
+sudo: required
 services:
     - docker
 
 before_install:
-    - docker build -t singhabhinav/react-project -f Dockerfile_dev .
+    - docker build -t nkumbhar/react-project -f Dockerfile_dev .
 
 script:
-    - docker run -e CI=true singhabhinav/react-project npm run test
+    - docker run -e CI=true nkumbhar/react-project npm run test
 
 #deploy:
 #    provider: elasticbeanstalk
